Chore: Add `@Nullable` annotations, update Javadoc versions, use parameterized logging, and improve formatting in `XRefTranscluder`